# rpg-platformer

./: CMakeLists.txt  README.md  install
include/: Animation.hpp  Entity.hpp  Hero.hpp  Math.hpp  RenderWindow.hpp  Sprites.hpp  System.hpp
src/: 3d-demo.c  Animation.cpp  Hero.cpp  Main.cpp  Math.cpp  Renderwindow.cpp  entity.cpp  example.cpp  math.cpp  renderwindow.cpp  sprites.cpp  sprites.hpp  system.cpp  test.cpp
